# My_workspace

./: READ.md  README.md
Project_rust/Note_pad/: Cargo.toml
crystal/block/: main.cr
crystal/class/: main.cr
crystal/http_server/: main.cr
crystal/proj/: README.md  shard.yml
crystal/project_test/: LICENSE  README.md  project_test  shard.yml
crystal/test_hello/: hello
crystal/union_test/: main.cr
glade_ui/: 저장하지 않음 6.glade
html/: list.html
kotlin/hello_world/: hello.kt
ruby/class/: method_test.rb  operator.rb  test.rb
ruby/file_test/: get.rb  main.rb
ruby/object/: main.rb  object_test.rb
ruby/require/: first.rb  second.rb
ruby/rescue/: main.rb
ruby/stack_test/: stack.rb  stacklike.rb
ruby/yield_test/: main.rb
rust/: .rust_learn.swp  rust_doc  rust_ffi  rust_guarantee  rust_learn  rust_ownership  rust_process  rust_traits
rust/Default_trait/: Cargo.toml
rust/Drop_trait/: Cargo.toml
rust/Guess_Game_Lopp/: Cargo.toml
rust/Universal/: Cargo.toml
rust/cell_test/: Cargo.toml
rust/channel_test/: Cargo.toml
rust/code_learn/: rust_macro  rust_process  rust_reference  rust_test  rust_traits
rust/diverging_func/: Cargo.toml
rust/ffi_test/: Cargo.toml
rust/for_test/: Cargo.toml
rust/func_pointer/: Cargo.toml
rust/have_to_do/: Cargo.toml  build.rs  hello
rust/have_to_do/src/: lib.rs  main.rs
rust/have_to_do/src/manager/: mod.rs
rust/have_to_do/src/ui/: have_to_do.glade  mod.rs
rust/let_shadow/: Cargo.toml
rust/match_test/: Cargo.toml
rust/store_foo/: Cargo.toml
rustscript/: test.rsc
vim/: vim_causion
(+215 files in other folders)
