[package]
name = "have_to_do"
version = "0.1.1"
authors = ["maxtnuk <maxtnuk@gmail.com>"]
build ="build.rs"

[build-dependencies]
serde_codegen="0.8.19"

[dependencies]
bincode = "*"
serde = "0.8.19"
gtk = { git = "https://github.com/gtk-rs/gtk.git" }
[dependencies.gtk]
version = "0.1.0"
features = ["v3_10"]
